# master01

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  array.c  array.h  lab19.c  lab20.c
libs/data_struct/: CMakeLists.txt
libs/data_struct/bitset/: bitset.c  bitset.h
libs/data_struct/matrix/: matrix.c  matrix.h
libs/data_struct/ordered_array/: ordered_array.c  ordered_array.h
libs/data_struct/string/: processing_string.c  processing_string.h  string_.c  string_.h
libs/data_struct/string/tusk/: test.c  test.h  test_processing_string.c  test_processing_string.h
libs/data_struct/unordered_array/: unordered_array.c  unordered_array.h
libs/data_struct/vector/: vector.c  vector.h
libs/data_struct/vector_void/: vectorVoid.c  vectorVoid.h
